Fix overflow in smaller screens

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,6 +1,5 @@
 /* Extra small devices (phones, 600px and down) */
-@media only screen 
-  and (min-device-width: 250px) 
+@media only screen
   and (max-width: 768px) {
     nav {
       width: 100vw;
